--- a/style/style.css
+++ b/style/style.css
@@ -82,14 +82,14 @@ section h2 {
     height: 500px;
 }
 .article-img-2{
-    background: url(/parallax/img/article.jpg);
+    background: url(/Parallax/img/article.jpg);
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
     height: 500px;
 }
 .image-small {
-    background-image: url(/parallax/img/footer.webp);
+    background-image: url(/Parallax/img/footer.webp);
     background-attachment: fixed;
     background-size: cover;
     width: 100%;
